--- a/src/app/groups.component.css
+++ b/src/app/groups.component.css
@@ -2,13 +2,13 @@
   background-color: #CFD8DC !important;
   color: white;
 }
-.heroes {
+.groups {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
   width: 15em;
 }
-.heroes li {
+.groups li {
   cursor: pointer;
   position: relative;
   left: 0;
@@ -18,20 +18,20 @@
   height: 1.6em;
   border-radius: 4px;
 }
-.heroes li:hover {
+.groups li:hover {
   color: #607D8B;
   background-color: #DDD;
   left: .1em;
 }
-.heroes li.selected:hover {
+.groups li.selected:hover {
   background-color: #BBD8DC !important;
   color: white;
 }
-.heroes .text {
+.groups .text {
   position: relative;
   top: -3px;
 }
-.heroes .badge {
+.groups .badge {
   display: inline-block;
   font-size: small;
   color: white;
