--- a/src/app/groups.component.html
+++ b/src/app/groups.component.html
@@ -1,17 +1,16 @@
-<h2>My Groups</h2>
+<h2>All Groups</h2>
 <ul class="groups">
   <table>
     <tr>
       <th>Name</th>
       <th>Amount</th>
       <th>Remove</th>
-
     </tr>
 
   <tr *ngFor="let group of groups">
     <td>{{group.name}}</td>
     <td>{{group.usersAmount}}</td>
-    <button>Delete</button>
+    <td><button (click)="removeGroup(group.name)">Remove</button></td>
   </tr>
     </table>
 
